--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button class="button">View My Resume</button>
         </div>
 
-        <div class="analytics">
+<!--         <div class="analytics">
             <div class="data">
                 <i class="bx bx-heart"></i>
                 <span class="number" >Nahi hai</span>
@@ -53,7 +53,7 @@
         <div class="data">
             <i class="bx bx-share"></i>
             <span class="number" >is caring</span>
-        </div>
+        </div> -->
     </div>   
 </body>
 </html>
